Aula 21
Entendendo a hierarquia de classes e métodos