@@ -66,7 +66,8 @@ public class Principal {
         listaDeFilmes.add(outroFilme);
 
         System.out.println("Tamanho da lista: " + listaDeFilmes.size());
-        System.out.println("Primeiro filme: " + listaDeFilmes.get(0).getNome());
+        System.out.println("Primeiro filme: " + listaDeFilmes.getFirst().getNome());
         System.out.println(listaDeFilmes);
+        System.out.println("toString do filme: : " + listaDeFilmes.getFirst().toString());
     }
 }
